--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "@types/node": "^15.0.2",
     "@types/uuid": "^8.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
